--- a/​xhs_chrome_plugin/修改说明.md
+++ b/​xhs_chrome_plugin/修改说明.md
@@ -45,4 +45,33 @@
 ## 注意事项
 
 - 如果小红书页面结构发生变化，可能会导致数据获取失败
-- 插件需要在小红书通知页面工作，会自动尝试跳转 
+- 插件需要在小红书通知页面工作，会自动尝试跳转
+
+## 小红书评论维护系统 - 数据获取插件更新日志
+
+### 2024-08-01 更新
+- 新增功能：在获取评论数据时自动获取和保存笔记内容
+  - 笔记内容将被保存到数据库的 `notes` 集合中
+  - 笔记内容包含以下信息：
+    - noteId: 笔记ID
+    - noteContent: 笔记文本内容
+    - noteLike: 点赞数
+    - noteCommitCount: 评论数
+    - publishTime: 发布时间
+    - authorId: 作者ID
+    - title: 笔记标题
+    - fetchTimestamp: 获取时间戳
+  - 当点击"获取推文评论"按钮时，插件会同时提取笔记内容并发送到服务器或下载到本地
+
+### 使用方法
+1. 打开小红书任意笔记页面
+2. 点击插件中的"获取推文评论"按钮
+3. 插件会同时获取评论数据和笔记内容
+4. 如果配置了API接口，数据会同时发送到服务器；否则会下载到本地
+
+### 之前更新
+- 实现评论区自动展开功能，支持展开所有子评论
+- 优化API接口调用，增加错误处理
+- 添加配置页面，可设置API接口地址和认证令牌
+- 实现评论数据提取功能，支持复杂的评论嵌套结构
+- 优化通知获取功能 
